--- a/myweb/templates/myweb/index.html
+++ b/myweb/templates/myweb/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootswatch: Solar</title>
+    <title>Bootswatch: Slate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css" media="screen">
     <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
   </head>
   <body>
-    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
       <div class="container">
         <a href="../" class="navbar-brand">Bootswatch</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,15 +53,15 @@
               <a class="nav-link" href="https://blog.bootswatch.com">Blog</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">Solar <span class="caret"></span></a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">Slate <span class="caret"></span></a>
               <div class="dropdown-menu" aria-labelledby="download">
-                <a class="dropdown-item" target="_blank" href="https://jsfiddle.net/bootswatch/mqoc3ah6/">Open in JSFiddle</a>
+                <a class="dropdown-item" target="_blank" href="https://jsfiddle.net/bootswatch/g1q7jxzf/">Open in JSFiddle</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="../4/solar/bootstrap.min.css" download>bootstrap.min.css</a>
-                <a class="dropdown-item" href="../4/solar/bootstrap.css" download>bootstrap.css</a>
+                <a class="dropdown-item" href="../4/slate/bootstrap.min.css" download>bootstrap.min.css</a>
+                <a class="dropdown-item" href="../4/slate/bootstrap.css" download>bootstrap.css</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="../4/solar/_variables.scss" download>_variables.scss</a>
-                <a class="dropdown-item" href="../4/solar/_bootswatch.scss" download>_bootswatch.scss</a>
+                <a class="dropdown-item" href="../4/slate/_variables.scss" download>_variables.scss</a>
+                <a class="dropdown-item" href="../4/slate/_bootswatch.scss" download>_bootswatch.scss</a>
               </div>
             </li>
           </ul>
@@ -76,8 +76,8 @@
       <div class="page-header" id="banner">
         <div class="row">
           <div class="col-lg-8 col-md-7 col-sm-6">
-            <h1>Solar</h1>
-            <p class="lead">A spin on Solarized</p>
+            <h1>Slate</h1>
+            <p class="lead">Shades of gunmetal gray</p>
           </div>
           <div class="col-lg-4 col-md-5 col-sm-6">
             <div class="sponsor">
@@ -117,6 +117,17 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
                     </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                        aria-expanded="false">Dropdown</a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                      </div>
+                    </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -147,6 +158,17 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
                     </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                        aria-expanded="false">Dropdown</a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                      </div>
+                    </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -176,6 +198,17 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                        aria-expanded="false">Dropdown</a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                      </div>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -256,7 +289,7 @@
                   </div>
                 </div>
               </div>
-
+              
               <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                 <button type="button" class="btn btn-info">Info</button>
                 <div class="btn-group" role="group">
@@ -267,7 +300,7 @@
                   </div>
                 </div>
               </div>
-
+              
               <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                 <button type="button" class="btn btn-danger">Danger</button>
                 <div class="btn-group" role="group">
@@ -535,7 +568,7 @@
                     <td>Column content</td>
                   </tr>
                 </tbody>
-              </table>
+              </table> 
             </div><!-- /example -->
           </div>
         </div>
@@ -1528,6 +1561,6 @@
     <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
     <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    
   </body>
 </html>
